# hackzurich_2022

./: README.md
backend/: README.md  pyproject.toml  requirements.txt  setup.md
backend/backend/: main.py
client/: .gitignore  pubspec.yaml
client/assets/lotties/: ready.json
client/lib/: main.dart
client/lib/service/: direction_sender.dart
client/lib/views/: main_view.dart  ready_go_view.dart
client/lib/widgets/: camera_view.dart  driving_control.dart  office_map.dart
rasp_testiscripts/: HZ2022_PWMCalibration.py  HZ2022_RaspberryPWMTest.py
